[gd_scene load_steps=2 format=3 uid="uid://cqqvdxrtjqh13"]

[ext_resource type="Script" uid="uid://5w74rbvieo1l" path="res://scenes/effect_editor.gd" id="1_na6de"]

[node name="EffectEditor" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
offset_right = 279.0
offset_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 8
script = ExtResource("1_na6de")

[node name="EffectNameOptionButton" type="OptionButton" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="EffectTargetOptionButton" type="OptionButton" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
min_value = -0.5
max_value = 1.5
step = 0.1
value = 0.5
alignment = 1

[node name="RemoveEffectButton" type="Button" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "X"
